--- a/payment_collection/report/report.xml
+++ b/payment_collection/report/report.xml
@@ -2,7 +2,6 @@
 <odoo>
 
 
-    
     <record id="action_report_collection_transaction" model="ir.actions.report">
         <field name="name">Recaudación de Pagos Reporte</field>
         <field name="model">collection.transaction</field>
@@ -10,10 +9,10 @@
         <field name="report_name">payment_collection.collection_transaction_report</field>
         <field name="report_file">payment_collection.collection_transaction_report</field>
         <field name="print_report_name">'%s' % object.transaction_name</field>
-        <field name="binding_model_id" ref="model_collection_transaction"/>
+        <field name="binding_model_id" ref="model_collection_transaction" />
         <field name="binding_type">report</field>
     </record>
-    
+
     <record id="action_report_collection_transaction_commission" model="ir.actions.report">
         <field name="name">Comisión por Agente Reporte</field>
         <field name="model">collection.transaction.commission</field>
@@ -21,7 +20,19 @@
         <field name="report_name">payment_collection.collection_transaction_commission_report</field>
         <field name="report_file">payment_collection.collection_transaction_commission_report</field>
         <field name="print_report_name">'Comisión por Agente: %s' % object.agent</field>
-        <field name="binding_model_id" ref="model_collection_transaction_commission"/>
+        <field name="binding_model_id" ref="model_collection_transaction_commission" />
+        <field name="binding_type">report</field>
+    </record>
+
+    <!-- REPORTE XLSX RECAUDACION DE PAGOS -->
+
+    <record id="report_collection_transaction_xlsx_id" model="ir.actions.report">
+        <field name="name">Imprimir Recaudacion de Pagos xlsx</field>
+        <field name="model">collection.transaction</field>
+        <field name="report_type">xlsx</field>
+        <field name="report_name">payment_collection.report_collection_transaction_xlsx</field>
+        <field name="report_file">payment_collection.report_collection_transaction_xlsx</field>
+        <field name="binding_model_id" ref="model_collection_transaction" />
         <field name="binding_type">report</field>
     </record>
 
