--- a/payment_collection/views/collection_transaction.xml
+++ b/payment_collection/views/collection_transaction.xml
@@ -9,11 +9,24 @@
                 decoration-danger="collection_trans_type == 'retiro'"
                 decoration-info="collection_trans_type == 'movimiento_interno'"
                 duplicate="0">
-<!--                <header>-->
-<!--                    <button groups="payment_collection.groups_payment_collection_admin" type="object"-->
-<!--                            name="recalculate_total_recs" class="btn btn-primary"-->
-<!--                            string="Recalcular Todo"/>-->
-<!--                </header>-->
+                <header>
+                    <button groups="payment_collection.groups_payment_collection_admin"
+                        type="object"
+                        name="recalculate_total_recs" class="btn btn-primary"
+                        string="Recalcular Todo" />
+                    <button groups="payment_collection.groups_payment_collection_admin"
+                        type="object" name="approved" class="btn btn-success"
+                        string="Aprobado" />
+                    <button groups="payment_collection.groups_payment_collection_admin"
+                        type="object" name="pending" class="btn btn-warning"
+                        string="Pendiente" />
+                    <button groups="payment_collection.groups_payment_collection_admin"
+                        type="object" name="refused" class="btn btn-danger"
+                        string="Rechazado" />
+                    <button groups="payment_collection.groups_payment_collection_admin"
+                        type="object" name="intern" class="btn btn-info"
+                        string="Interno" />
+                </header>
                 <field name="collection_trans_type" string="Tipo T." />
                 <field name="date" />
                 <field name="customer" />
@@ -23,6 +36,7 @@
                 <field name="operation" />
                 <field name="description" />
                 <field name="amount" sum="Total" />
+                <field name="commission_app_amount" sum="Total APP" />
                 <!-- <field name="available_balance" optional="hide" /> -->
                 <field name="origin_account_cuit" />
                 <field name="origin_account_cvu" />
@@ -35,7 +49,7 @@
                     decoration-danger="transaction_state == 'rechazado'"
                     decoration-warning="transaction_state == 'pendiente'"
                     decoration-success="transaction_state == 'aprobado'"
-                    decoration-info="transaction_state == 'interno'"/>
+                    decoration-info="transaction_state == 'interno'" />
             </tree>
         </field>
     </record>
@@ -74,7 +88,7 @@
                             <field name="real_balance" readonly="1" force_save="1"
                                 groups="payment_collection.groups_payment_collection_admin" />
                             <field name="date_available_amount" readonly="1" force_save="1" />
-                            <field name="is_commission" invisible="1"/>
+                            <field name="is_commission" invisible="1" />
                         </group>
 
 
